--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               </div>
               <div class="card-footer bg-transparent border-top-0 d-flex justify-content-between">
                 <a href="https://github.com/Maharshi2006/EcoEnergy-Hub" class="btn btn-outline-light btn-sm">GitHub</a>
-                <a href="#" class="btn btn-outline-success btn-sm">Live App</a>
+                <a href="http://ecoenergyhub.netlify.app/" class="btn btn-outline-success btn-sm">Live App</a>
               </div>
             </div>
           </div>
