--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               </div>
               <div class="card-footer bg-transparent border-top-0 d-flex justify-content-between">
                 <a href="https://github.com/Maharshi2006/PRODIGY_WD_05" class="btn btn-outline-light btn-sm">Code</a>
-                <a href="#" class="btn btn-outline-info btn-sm">Demo</a>
+                <a href="https://autocheckweather.netlify.app/" class="btn btn-outline-info btn-sm">Demo</a>
               </div>
             </div>
           </div>
